--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,16 @@
+p {
+    font-family: 'Space Mono', monospace;
+}
 .flex-grid {
     display: flex;
     justify-content: space-around;
+}
+
+.caption {
+    text-align: center;
+    font-style: italic;
+}
+img {
+    width: 400px;
+    height: 300px;
 }
