--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,63 @@
+body {
+    font-family: 'Space Mono', monospace;
+}
+
 h1 {
     padding: 10px;
 }
+
+h3 {
+    text-align: center;
+}
+
 p {
-    font-family: 'Space Mono', monospace;
     padding: 10px;
 }
+
+img {
+    width: 400px;
+    height: 300px;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px 20px;
+    border-color: #89c3eb;
+    border-radius: 5px;
+}
+
+input[type=submit] {
+    background-color: #89c3eb;
+    color: #ffffff;
+    cursor: pointer;
+    border: none;
+}
+
+input[type=submit]:hover {
+    background-color: #52758d;
+}
+
+blockquote {
+    font-style: italic;
+    font-size: 90%;
+}
+
 .flex-grid {
     display: flex;
     justify-content: space-around;
+}
+
+.col {
+    flex: 1;
 }
 
 .caption {
     text-align: center;
     font-style: italic;
 }
-img {
-    width: 400px;
-    height: 300px;
+
+.contact {
+    margin: auto;
+    width: 60%;
+    padding: 10px;
 }
