--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,10 @@ p {
 }
 
 img {
-    width: 400px;
-    height: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
 }
 
 input, textarea {
@@ -60,4 +62,27 @@ blockquote {
     margin: auto;
     width: 60%;
     padding: 10px;
+}
+
+.faq-fold {
+    background-color: #89c3eb;
+    color: #ffff;
+    font-size: 15px;
+    text-align: left;
+    width: 100%;
+    padding: 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.faq-fold:hover, .selected {
+    background-color: #52758d;
+}
+
+.fold {
+    display: none;
+    padding: 0 16px;
+    background-color: #ffffff;
+    overflow: hidden;
 }
