--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,34 @@ footer {
     text-align: right;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #52758d;
+}
+
+li {
+    float: right;
+}
+
+li a {
+    display: block;
+    color: #ffffff;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #6d9cbc;
+}
+
+.active {
+    background-color: #5dade4;
+}
+
 .flex-grid {
     display: flex;
     justify-content: space-around;
@@ -90,4 +118,12 @@ footer {
     padding: 0 16px;
     background-color: #ffffff;
     overflow: hidden;
+}
+
+.company {
+    float: left;
+    padding: 7px;
+    color: #ffffff;
+    font-family: cursive;
+    font-size: 125%;
 }
